syntax = "proto3";

package message;


message MsgHead{
    int32 messageId = 1;
    bytes stationId = 2;
    bytes headinfo = 16;
}

